# RectangularScintillator

./: .gitignore  CMakeLists.txt  README.md  RectangularScintillator.tex  geometry.cpp  geometry.h  lightguide.cpp  lightguide.h  multi_signal.cpp  mutli_signal.h  photon2signal.cpp  photon2signal.h  photon_accept.cpp  rectscin.cpp  rectscin.h  rectscinexception.cpp  rectscinexception.h  sensitive.cpp  sensitive.h  signal.cpp  signal_analyse.cpp  signal_analyse.h  signal_model.cpp  signal_model.h  signal_processing.cpp  signal_processing.h  signal_statistics.cpp  signal_statistics.h
Example/: CMakeLists.txt  example.cpp  example1.cpp  example2.cpp  example3.cpp  test_scin.cpp
RectScinTest/: CMakeLists.txt  geometry.cpp  photon2signal.cpp  processing.cpp  rectscin.cpp  sensitive.cpp  statistics.cpp  test_objects.cpp  test_objects.h
include/: geometry.h  gnuplot_wrap.h  math_h  photon2signal.h  rectscin.h  sensitive.h  signal_processing.h  signal_statistics.h
include/RectScin/: geometry.h  lightguide.h  photon2signal.h  rectscin.h  scintillator.h  sensitive.h  signal_processing.h  signal_statistics.h
src/: CMakeLists.txt  geometry.cpp  lightguide.cpp  photon2signal.cpp  rectscin.cpp  scintillator.cpp  sensitive.cpp  signal_processing.cpp  signal_statistics.cpp
tests/: CMakeLists.txt  geometry.cpp  photon2signal.cpp  processing.cpp  rectscin.cpp  sensitive.cpp  statistics.cpp  test_objects.cpp  test_objects.h
