cmake_minimum_required(VERSION 2.6)
project(RectScinTest)
set(CMAKE_CXX_FLAGS "-fprofile-arcs -ftest-coverage -g -Wall -pthread -std=gnu++11")
include_directories(..)
set(gtestlibs gtest gtest_main)
set(files_to_test ../rectscinexception.cpp ../geometry.cpp ../rectscin.cpp ../sensitive.cpp ../signal_model.cpp ../signal_analyse.cpp)
set(tests geometry.cpp)
add_executable(rectscintest ${tests} ${files_to_test})
target_link_libraries(rectscintest ${gtestlibs})
