cmake_minimum_required(VERSION 2.6)
project(RectScinTest)
set(CMAKE_CXX_FLAGS "-fprofile-arcs -ftest-coverage -g -Wall -pthread -std=gnu++11")
include_directories(..)
set(gtestlibs gtest gtest_main)
set(files_to_test ../geometry.cpp ../rectscin.cpp ../sensitive.cpp ../photon2signal.cpp ../signal_processing.cpp ../signal_statistics.cpp)
set(tests geometry.cpp rectscin.cpp sensitive.cpp photon2signal.cpp processing.cpp statistics.cpp)
add_executable(rectscintest ${tests} ${files_to_test} test_objects.cpp)
target_link_libraries(rectscintest ${gtestlibs})
